components/manifests/overlays/openshift-dev/ambient-api-server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ambient-api-server
  labels:
    app: ambient-api-server
    component: api
  annotations:
    haproxy.router.openshift.io/timeout: 10m
spec:
  to:
    kind: Service
    name: ambient-api-server
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
